--- a/docs/src/main/asciidoc/jms.adoc
+++ b/docs/src/main/asciidoc/jms.adoc
@@ -65,11 +65,11 @@ docker run -it --rm -p 8161:8161 -p 61616:61616 -e ARTEMIS_USERNAME=quarkus -e A
 
 == The price producer
 
-Create the `src/main/java/org/acme/quarkus/sample/PriceProducer.java` file, with the following content:
+Create the `src/main/java/org/acme/jms/PriceProducer.java` file, with the following content:
 
 [source, java]
 ----
-package org.acme.artemis;
+package org.acme.jms;
 
 import java.util.Random;
 import java.util.concurrent.Executors;
@@ -118,11 +118,11 @@ public class PriceProducer implements Runnable {
 == The price consumer
 
 The price consumer reads the prices from JMS, and stores the last one.
-Create the `src/main/java/org/acme/quarkus/sample/PriceConsumer.java` file with the following content:
+Create the `src/main/java/org/acme/jms/PriceConsumer.java` file with the following content:
 
 [source, java]
 ----
-package org.acme.artemis;
+package org.acme.jms;
 
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -184,11 +184,11 @@ public class PriceConsumer implements Runnable {
 == The price resource
 
 Finally, let's create a simple JAX-RS resource to show the last price.
-Creates the `src/main/java/org/acme/quarkus/sample/PriceResource.java` file with the following content:
+Creates the `src/main/java/org/acme/jms/PriceResource.java` file with the following content:
 
 [source, java]
 ----
-package org.acme.artemis;
+package org.acme.jms;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
