--- a/docs/src/main/asciidoc/mongodb.adoc
+++ b/docs/src/main/asciidoc/mongodb.adoc
@@ -49,7 +49,7 @@ First, we need a new project. Create a new project with the following command:
 mvn io.quarkus:quarkus-maven-plugin:{quarkus-version}:create \
     -DprojectGroupId=org.acme \
     -DprojectArtifactId=mongodb-quickstart \
-    -DclassName="org.acme.rest.json.FruitResource" \
+    -DclassName="org.acme.mongodb.FruitResource" \
     -Dpath="/fruits" \
     -Dextensions="resteasy-jsonb,mongodb-client,resteasy-mutiny,context-propagation"
 cd mongodb-quickstart
@@ -67,7 +67,7 @@ First, let's create the `Fruit` bean as follows:
 
 [source,java]
 ----
-package org.acme.rest.json;
+package org.acme.mongodb;
 
 import java.util.Objects;
 
@@ -120,11 +120,11 @@ public class Fruit {
 
 Nothing fancy. One important thing to note is that having a default constructor is required by the JSON serialization layer.
 
-Now create a `org.acme.rest.json.FruitService` that will be the business layer of our application and store/load the fruits from the mongoDB database.
+Now create a `org.acme.mongodb.FruitService` that will be the business layer of our application and store/load the fruits from the mongoDB database.
 
 [source,java]
 ----
-package org.acme.rest.json;
+package org.acme.mongodb;
 
 import com.mongodb.client.MongoClient;
 import com.mongodb.client.MongoCollection;
@@ -172,7 +172,7 @@ public class FruitService {
 }
 ----
 
-Now, edit the `org.acme.rest.json.FruitResource` class as follows:
+Now, edit the `org.acme.mongodb.FruitResource` class as follows:
 
 [source,java]
 ----
@@ -297,7 +297,7 @@ The MongoDB reactive client uses Mutiny reactive types, if you're not familiar w
 
 [source,java]
 ----
-package org.acme.rest.json;
+package org.acme.mongodb;
 
 import io.quarkus.mongodb.reactive.ReactiveMongoClient;
 import io.quarkus.mongodb.reactive.ReactiveMongoCollection;
@@ -340,7 +340,7 @@ public class ReactiveFruitService {
 
 [source,java]
 ----
-package org.acme.rest.json;
+package org.acme.mongodb;
 
 import io.smallrye.mutiny.Uni;
 
@@ -385,10 +385,10 @@ More information in the codec documentation: https://mongodb.github.io/mongo-jav
 
 [source,java]
 ----
-package org.acme.rest.json.codec;
+package org.acme.mongodb.codec;
 
 import com.mongodb.MongoClientSettings;
-import org.acme.rest.json.Fruit;
+import org.acme.mongodb.Fruit;
 import org.bson.Document;
 import org.bson.BsonWriter;
 import org.bson.BsonValue;
@@ -459,9 +459,9 @@ Then you need to create a `CodecProvider` to link this `Codec` to the `Fruit` cl
 
 [source,java]
 ----
-package org.acme.rest.json.codec;
+package org.acme.mongodb.codec;
 
-import org.acme.rest.json.Fruit;
+import org.acme.mongodb.Fruit;
 import org.bson.codecs.Codec;
 import org.bson.codecs.configuration.CodecProvider;
 import org.bson.codecs.configuration.CodecRegistry;
@@ -486,7 +486,7 @@ Here is an example of using a `MongoCollection` with the `FruitCodec`.
 
 [source,java]
 ----
-package org.acme.rest.json;
+package org.acme.mongodb;
 
 import com.mongodb.client.MongoClient;
 import com.mongodb.client.MongoCollection;
