--- a/docs/src/main/asciidoc/security-keycloak-authorization.adoc
+++ b/docs/src/main/asciidoc/security-keycloak-authorization.adoc
@@ -83,7 +83,7 @@ As you can see from the source code below it is just a regular JAX-RS resource:
 
 [source,java]
 ----
-package org.acme.keycloak;
+package org.acme.security.keycloak.authorization;;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
@@ -128,7 +128,7 @@ The source code for the `/api/admin` endpoint is also very simple:
 
 [source,java]
 ----
-package org.acme.keycloak;
+package org.acme.security.keycloak.authorization;;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
